# zero2prod_hannukorvala

./: Cargo.toml  configuration.yaml
.cargo/: config.toml
.github/workflows/: codecoverage_audit.yml  format_audit.yml  linter_audit.yml  security_audit.scheluded.yml  security_audit.yml  security_audit_scheluded.yml  tests_audit.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
