[package]
name = "zero2prod_hannukorvala"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# We can only have one library in a project, but multiple binaries!
# [[ ]] means an array in TOML syntax
[[bin]]
path = "src/main.rs"
name = "zero2prod_hannukorvala"

[dependencies]
actix-web = "4"
tokio = { version = "1", features= ["macros", "rt-multi-thread"]}
reqwest = "0.11"