[package]
name = "zero2prod_hannukorvala"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# We can only have one library in a project, but multiple binaries!
# [[ ]] means an array in TOML syntax
[[bin]]
path = "src/main.rs"
name = "zero2prod_hannukorvala"

[dependencies]
actix-web = "4"     # web framework
tokio = { version = "1", features= ["macros", "rt-multi-thread"]} # asynchronous rust runtime
reqwest = "0.11" # provides a higher-level HTTP client
serde = { version = "1", features = ["derive"]} # data structures that know how to serialize and deserialize themselves